<resources>
    <string name="app_name">App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="buildBigger">BUILD IT BIGGER</string>
    <string name="reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="launchspotify">This button will launch spotify streamer app!</string>
    <string name="launchscores">This button will launch scores app!</string>
    <string name="launchlibrary">This button will launch library app!</string>
    <string name="launchbuildbigger">This button will launch build it bigger app!</string>
    <string name="launchreader">This button will launch xyz reader app!</string>
    <string name="launchcapstone">This button will launch my capstone app!</string>
</resources>
